--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@types/koa-bodyparser": "^4.2.0",
     "@types/koa-logger": "^3.1.0",
     "@types/koa-router": "^7.0.27",
+    "@types/mongoose": "^5.3.24",
     "@types/node": "^9.4.0",
+    "ndb": "^1.0.33",
     "ts-node": "^4.1.0",
-    "typescript": "^2.7.1",
-    "ndb": "^1.0.33"
+    "typescript": "^2.7.1"
   },
   "dependencies": {
     "kcors": "^2.2.1",
@@ -34,6 +35,7 @@
     "koa-custom-response": "^0.2.2",
     "koa-logger": "^3.1.0",
     "koa-router": "^7.4.0",
+    "mongoose": "^5.4.20",
     "reflect-metadata": "^0.1.12",
     "routing-controllers": "^0.7.7",
     "typedi": "^0.7.2"
