👍 feat: add configs

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@types/koa-router": "^7.0.27",
     "@types/mongoose": "^5.3.24",
     "@types/node": "^9.4.0",
+    "@types/lodash": "^4.14.120",
+    "@types/log4js": "^2.3.5",
+    "@types/tcp-ping": "^0.1.0",
+    "@types/uuid": "^3.4.4",
     "ndb": "^1.0.33",
     "ts-node": "^4.1.0",
     "typescript": "^2.7.1"
@@ -36,6 +40,10 @@
     "koa-logger": "^3.1.0",
     "koa-router": "^7.4.0",
     "mongoose": "^5.4.20",
+    "lodash": "^4.17.11",
+    "log4js": "^3.0.6",
+    "tcp-ping": "^0.1.1",
+    "uuid": "^3.3.2",
     "reflect-metadata": "^0.1.12",
     "routing-controllers": "^0.7.7",
     "typedi": "^0.7.2"
