--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.2",
     "@types/chai-http": "^3.0.4",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/kcors": "^2.2.2",
     "@types/koa": "^2.0.43",
     "@types/koa-bodyparser": "^4.2.0",
@@ -34,6 +35,7 @@
     "typescript": "^2.7.1"
   },
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "kcors": "^2.2.1",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
