--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "export NODE_ENV=development; ts-node app/app.ts",
+    "start": "source /etc/zshrc; export NODE_ENV=development; ts-node app/app.ts",
     "serve": "pm2 start --interpreter node_modules/.bin/ts-node app/app.ts --name Intruders",
     "build": "npm run lint && tsc",
     "clean": "npm run clean:build",
