--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/kcors": "^2.2.2",
     "@types/koa": "^2.0.43",
     "@types/koa-bodyparser": "^4.2.0",
-    "@types/koa-logger": "^3.1.0",
+    "@types/koa-log4": "^2.3.0",
     "@types/koa-router": "^7.0.27",
     "@types/lodash": "^4.14.120",
     "@types/log4js": "^2.3.5",
@@ -40,7 +40,7 @@
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-custom-response": "^0.2.2",
-    "koa-logger": "^3.1.0",
+    "koa-log4": "^2.3.2",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.11",
     "log4js": "^3.0.6",
