--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.2",
     "@types/chai-http": "^3.0.4",
+    "@types/html-pdf": "^2.1.2",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/kcors": "^2.2.2",
     "@types/koa": "^2.0.43",
@@ -36,6 +37,7 @@
     "typescript": "^2.7.1"
   },
   "dependencies": {
+    "html-pdf": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "kcors": "^2.2.1",
     "koa": "^2.4.1",
