--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/mongoose": "^5.3.24",
     "@types/node": "^9.4.0",
     "@types/tcp-ping": "^0.1.0",
+    "@types/uuid": "^3.4.4",
     "ndb": "^1.0.33",
     "ts-node": "^4.1.0",
     "typescript": "^2.7.1"
@@ -52,6 +53,7 @@
     "reflect-metadata": "^0.1.12",
     "routing-controllers": "^0.7.7",
     "tcp-ping": "^0.1.1",
-    "typedi": "^0.7.2"
+    "typedi": "^0.7.2",
+    "uuid": "^3.3.2"
   }
 }
