--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/md5": "^2.1.33",
     "@types/mongoose": "^5.3.24",
     "@types/node": "^9.4.0",
+    "@types/redis": "^2.8.12",
     "@types/tcp-ping": "^0.1.0",
     "@types/uuid": "^3.4.4",
     "ndb": "^1.0.33",
@@ -50,6 +51,8 @@
     "log4js": "^3.0.6",
     "md5": "^2.2.1",
     "mongoose": "^5.4.20",
+    "ps-node": "^0.1.6",
+    "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "routing-controllers": "^0.7.7",
     "tcp-ping": "^0.1.1",
