--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "init": "ts-node app/scripts/init_user.ts",
     "dev-init": "source /etc/zshrc; export NODE_ENV=development; ts-node app/scripts/init_user.ts",
     "start": "source /etc/zshrc; export NODE_ENV=development; ts-node app/app.ts",
-    "serve": "pm2 start --interpreter node_modules/.bin/ts-node app/app.ts --name Intruders",
+    "serve": "pm2 start --interpreter node_modules/.bin/ts-node app/app.ts --name kalilabs",
     "build": "npm run lint && tsc",
     "clean": "npm run clean:build",
     "clean:build": "rm -rf dist",
