--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - 3000:3000
     environment:
       NODE_ENV: production
+      DB_HOSR: '157.230.14.98'
       DB_USER: kalilabs
       DB_PASSWORD: ekmfyyU
       REDIS_HOST: redis
